# museum_api

./: .gitignore  Parameters.py  README.md  application.py  pyproject.toml
api/: __init__.py
api/extensions/: install_jwt_extension.py
domain/models/: Auth.py  Collection.py  Exhibition.py  Piece.py  User.py  __init__.py
infrastructure/database/: BaseModel.py
manual_migrations/: 202503250944_CreateDataBase.py  run_migrations.py
