[project]
name = "museu-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Afonso Medeiros"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "bottle (==0.13.2)",
    "jwt-bottle (>=2025.3.1,<2026.0.0)",
    "peewee (>=3.17.9,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
